8283318: Videos with unusual sizes cannot be played on windows

Reviewed-by: kcr